tests/baselines/reference/classAbstractUsingAbstractMethods2(strict=true).errors.txt
classAbstractUsingAbstractMethods2.ts(2,5): error TS1244: Abstract methods can only appear within an abstract class.
classAbstractUsingAbstractMethods2.ts(2,14): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
classAbstractUsingAbstractMethods2.ts(5,7): error TS2515: Non-abstract class 'B' does not implement inherited abstract member foo from class 'A'.
classAbstractUsingAbstractMethods2.ts(18,14): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
classAbstractUsingAbstractMethods2.ts(21,7): error TS2515: Non-abstract class 'BB' does not implement inherited abstract member foo from class 'AA'.


==== classAbstractUsingAbstractMethods2.ts (5 errors) ====
    class A {
        abstract foo();
        ~~~~~~~~
!!! error TS1244: Abstract methods can only appear within an abstract class.
                 ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    class B extends A  {}
          ~
!!! error TS2515: Non-abstract class 'B' does not implement inherited abstract member foo from class 'A'.
    
    abstract class C extends A {}
    
    class D extends A {
        foo() {}
    }
    
    abstract class E extends A {
        foo() {}
    }
    
    abstract class AA {
        abstract foo();
                 ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    class BB extends AA  {}
          ~~
!!! error TS2515: Non-abstract class 'BB' does not implement inherited abstract member foo from class 'AA'.
    
    abstract class CC extends AA {}
    
    class DD extends AA {
        foo() {}
    }